# Open_Env

./: .gitignore  Dockerfile  README.md  _tmp_validate_env.py  app.py  inference.py  openenv.yaml  output.txt  pyproject.toml  requirements.txt  validate_env.py
env/: __init__.py  core.py  models.py  reward.py  state_manager.py
env/graders/: __init__.py  base_grader.py  bug_grader.py  cross_file_grader.py  logic_grader.py
env/tasks/: __init__.py  easy_bug.py  hard_cross_file.py  medium_logic.py
server/: __init__.py  app.py
tests/: test_env_validation.py
